# titicaca

./: .gitignore  README.md  README.rst  everest-api  everest-manage  pylintrc  requirements.txt  setup.cfg  setup.py  test-requirements.txt  titicaca-api  titicaca-manage  tox.ini
etc/: everest-api.conf  everest-manage.conf  everest-policy-generator.conf  glance-api-paste.ini  glance-cache.conf  glance-policy-generator.conf  glance-scrubber.conf  glance-swift.conf.sample  property-protections-policies.conf.sample  property-protections-roles.conf.sample  schema-image.json  titicaca-api.conf  titicaca-api.conf.sample  titicaca-cache.conf  titicaca-image-import.conf.sample  titicaca-manage.conf  titicaca-manage.conf.sample  titicaca-scrubber.conf
etc/metadefs/: README  cim-processor-allocation-setting-data.json  cim-resource-allocation-setting-data.json  cim-storage-allocation-setting-data.json  cim-virtual-system-setting-data.json  compute-aggr-disk-filter.json  compute-aggr-iops-filter.json  compute-aggr-num-instances.json  compute-cpu-mode.json  compute-cpu-pinning.json  compute-guest-memory-backing.json  compute-guest-shutdown.json  compute-host-capabilities.json  compute-hypervisor.json  compute-instance-data.json  compute-libvirt-image.json  compute-libvirt.json  compute-quota.json  compute-randomgen.json  compute-vcputopology.json  compute-vmware-flavor.json  compute-vmware-quota-flavor.json  compute-vmware.json  compute-vtpm-hw.json  compute-vtpm.json  compute-watchdog.json  compute-xenapi.json  glance-common-image-props.json  image-signature-verification.json  operating-system.json  software-databases.json  software-runtimes.json  software-webservers.json  storage-volume-type.json  titicaca-common-image-props.json
etc/oslo-config-generator/: everest-api.conf  everest-manage.conf  glance-api.conf  glance-cache.conf  glance-image-import.conf  glance-manage.conf  glance-scrubber.conf
everest/: context.py  i18n.py  opts.py  version.py
everest/api/api_v1/: api.py
everest/api/api_v1/endpoints/: project.py  user.py
everest/cmd/: api.py  control.py  manage.py  status.py
everest/common/: config.py  exception.py  password_hashing.py  timeutils.py  utils.py  wsgi.py
everest/common/resource_options/: __init__.py  core.py  project_resource_options.py  role_resource_option.py  user_resource_options.py
everest/common/validation/: __init__.py  parameter_types.py  validators.py
everest/db/: __init__.py  metadata.py  migration.py
everest/db/simple/: api.py
everest/db/sqlalchemy/: api.py  metadata.py
titicaca/: context.py  gateway.py  housekeeping.py  i18n.py  location.py  notifier.py  opts.py  schema.py  scrubber.py  version.py
titicaca/api/: __init__.py  authorization.py  common.py  policy.py  property_protections.py  versions.py
titicaca/api/api_v1/: api.py
titicaca/api/middleware/: cache.py  cache_manage.py  context.py  gzip.py  version_negotiation.py
titicaca/api/v1/: router.py
titicaca/api/v2/: cached_images.py  discovery.py  image_actions.py  image_data.py  image_members.py  image_tags.py  images.py  metadef_namespaces.py  metadef_objects.py  metadef_properties.py  metadef_resource_types.py  metadef_tags.py  policy.py  router.py  schemas.py  tasks.py
titicaca/async_/: __init__.py  taskflow_executor.py  utils.py
titicaca/async_/flows/: api_image_import.py  base_import.py  convert.py  introspect.py  ovf_process.py
titicaca/cmd/: api.py  cache_cleaner.py  cache_manage.py  cache_prefetcher.py  cache_pruner.py  control.py  manage.py  replicator.py  scrubber.py  status.py
titicaca/common/: auth.py  client.py  config.py  crypt.py  driver_hints.py  exception.py  format_inspector.py  manager.py  password_hashing.py  property_utils.py  provider_api.py  removed_config.py  store_utils.py  swift_store_utils.py  trust_auth.py  utils.py  wsgi.py  wsgi_app.py  wsme_utils.py
titicaca/common/cache/: __init__.py  _context_cache.py  core.py
titicaca/common/location_strategy/: __init__.py  location_order.py  store_type.py
titicaca/common/resource_options/: __init__.py  core.py  identity_resource_options.py  project_resource_options.py  role_resource_option.py  user_resource_options.py
titicaca/common/scripts/: __init__.py  utils.py
titicaca/common/validation/: __init__.py  validators.py
titicaca/db/: __init__.py  metadata.py  migration.py  utils.py
titicaca/db/simple/: api.py
titicaca/db/sqlalchemy/: api.py  metadata.py  models.py  models_metadef.py  schema.py
titicaca/domain/: __init__.py  proxy.py
titicaca/hacking/: checks.py
titicaca/identity/: api.py  user.py
titicaca/image_cache/: __init__.py  base.py  cleaner.py  client.py  prefetcher.py  pruner.py
titicaca/image_cache/drivers/: base.py  sqlite.py  xattr.py
titicaca/policies/: __init__.py  base.py  cache.py  discovery.py  image.py  metadef.py  tasks.py
titicaca/quota/: __init__.py  keystone.py
titicaca/tests/: __init__.py  stubs.py  test_hacking.py  utils.py
titicaca/tests/etc/: policy.yaml  property-protections-policies.conf
titicaca/tests/functional/: __init__.py  ft_utils.py  store_utils.py  test_api.py  test_cache_middleware.py  test_client_exceptions.py  test_client_redirects.py  test_cors_middleware.py  test_glance_manage.py  test_gzip_middleware.py  test_healthcheck_middleware.py  test_logging.py  test_reload.py  test_sqlite.py  test_wsgi.py
titicaca/tests/gate/: test_data_migration_version.py
titicaca/tests/unit/: base.py  fake_rados.py  fixtures.py  test_auth.py  test_cache_manage.py  test_cache_middleware.py  test_cached_images.py  test_context.py  test_context_middleware.py  test_data_migration_framework.py  test_db.py  test_db_metadef.py  test_domain.py  test_domain_proxy.py  test_gateway.py  test_glance_manage.py  test_glance_replicator.py  test_housekeeping.py  test_image_cache.py  test_manage.py  test_misc.py  test_notifier.py  test_policy.py  test_quota.py  test_schema.py  test_scrubber.py  test_store_image.py  test_store_location.py  test_test_utils.py  test_versions.py  utils.py
titicaca/tests/unit/keymgr/: fake.py
titicaca/tests/var/: certificate.crt
(+201 files in other folders)
