[metadata]
name = titicaca
summary = Titicaca Image Service
description_file =
    README.md
author = WenRui Gong
author_email = gongwr@qq.com
home_page = https://gongwr.org/titicaca/latest/
python_requires = >=3.9
classifier =
    Environment :: Enterprise Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Proprietary Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
data_files =
    etc/titicaca =
        etc/titicaca-api.conf
        etc/titicaca-cache.conf
        etc/titicaca-manage.conf
        etc/titicaca-scrubber.conf
        etc/titicaca-api-paste.ini
    etc/titicaca/metadefs = etc/metadefs/*
packages =
    titicaca

[entry_points]
console_scripts =
    titicaca-api = titicaca.cmd.api:main
    titicaca-cache-prefetcher = titicaca.cmd.cache_prefetcher:main
    titicaca-cache-pruner = titicaca.cmd.cache_pruner:main
    titicaca-cache-manage = titicaca.cmd.cache_manage:main
    titicaca-cache-cleaner = titicaca.cmd.cache_cleaner:main
    titicaca-control = titicaca.cmd.control:main
    titicaca-manage = titicaca.cmd.manage:main
    titicaca-replicator = titicaca.cmd.replicator:main
    titicaca-scrubber = titicaca.cmd.scrubber:main
    titicaca-status = titicaca.cmd.status:main
wsgi_scripts =
    titicaca-wsgi-api = titicaca.common.wsgi_app:init_app
titicaca.common.image_location_strategy.modules =
    location_order_strategy = titicaca.common.location_strategy.location_order
    store_type_strategy = titicaca.common.location_strategy.store_type
oslo.config.opts =
    titicaca.api = titicaca.opts:list_api_opts
    titicaca.scrubber = titicaca.opts:list_scrubber_opts
    titicaca.cache= titicaca.opts:list_cache_opts
    titicaca.manage = titicaca.opts:list_manage_opts
    titicaca = titicaca.opts:list_image_import_opts
oslo.config.opts.defaults =
    titicaca.api = titicaca.common.config:set_config_defaults
titicaca.database.metadata_backend =
    sqlalchemy = titicaca.db.sqlalchemy.metadata

oslo.policy.enforcer =
    titicaca = titicaca.api.policy:get_enforcer
oslo.policy.policies =
    titicaca = titicaca.policies:list_rules

titicaca.flows =
    api_image_import = titicaca.async_.flows.api_image_import:get_flow
    import = titicaca.async_.flows.base_import:get_flow

titicaca.flows.import =
    convert = titicaca.async_.flows.convert:get_flow
    introspect = titicaca.async_.flows.introspect:get_flow
    ovf_process = titicaca.async_.flows.ovf_process:get_flow

titicaca.image_import.plugins =
    no_op = titicaca.async_.flows.plugins.no_op:get_flow
    inject_image_metadata=titicaca.async_.flows.plugins.inject_image_metadata:get_flow
    image_conversion=titicaca.async_.flows.plugins.image_conversion:get_flow
    image_decompression=titicaca.async_.flows.plugins.image_decompression:get_flow

titicaca.image_import.internal_plugins =
    web_download = titicaca.async_.flows._internal_plugins.web_download:get_flow
    copy_image = titicaca.async_.flows._internal_plugins.copy_image:get_flow


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
