[metadata]
name = titicaca
summary = Titicaca Image Service
description_file =
    README.md
author = WenRui Gong
author_email = gongwr@qq.com
home_page = https://gongwr.org/titicaca/latest/
python_requires = >=3.9
classifier =
    Environment :: Enterprise Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Proprietary Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
data_files =
    etc/titicaca =
        etc/titicaca-api.conf
        etc/titicaca-manage.conf
    etc/titicaca/metadefs = etc/metadefs/*
packages =
    titicaca

[entry_points]
console_scripts =
    titicaca-api = titicaca.cmd.api:main
    titicaca-control = titicaca.cmd.control:main
    titicaca-manage = titicaca.cmd.manage:main
    titicaca-status = titicaca.cmd.status:main
oslo.config.opts =
    titicaca.api = titicaca.opts:list_api_opts
    titicaca.manage = titicaca.opts:list_manage_opts
oslo.config.opts.defaults =
    titicaca.api = titicaca.common.config:set_config_defaults
titicaca.database.metadata_backend =
    sqlalchemy = titicaca.db.sqlalchemy.metadata

oslo.policy.enforcer =
    titicaca = titicaca.api.policy:get_enforcer
oslo.policy.policies =
    titicaca = titicaca.policies:list_rules


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
