[metadata]
name = everest
summary = Everest Image Service
description_file =
    README.md
author = WenRui Gong
author_email = gongwr@qq.com
home_page = https://gongwr.org/everest/latest/
python_requires = >=3.9
classifier =
    Environment :: Enterprise Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Proprietary Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
data_files =
    etc/everest =
        etc/everest-api.conf
        etc/everest-manage.conf
    etc/everest/metadefs = etc/metadefs/*
packages =
    everest

[entry_points]
console_scripts =
    everest-api = everest.cmd.api:main
    everest-control = everest.cmd.control:main
    everest-manage = everest.cmd.manage:main
    everest-status = everest.cmd.status:main
oslo.config.opts =
    everest.api = everest.opts:list_api_opts
    everest.manage = everest.opts:list_manage_opts
oslo.config.opts.defaults =
    everest.api = everest.common.config:set_config_defaults
everest.database.metadata_backend =
    sqlalchemy = everest.db.sqlalchemy.metadata

oslo.policy.enforcer =
    everest = everest.api.policy:get_enforcer
oslo.policy.policies =
    everest = everest.policies:list_rules


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
